Fix price vertical align

--- a/src/scss/modules/_price-table.scss
+++ b/src/scss/modules/_price-table.scss
@@ -70,7 +70,7 @@
 .price-table__price {
     // box model
     padding: 5px 0;
-    vertical-align: top;
+    vertical-align: middle;
 
     // typography
     color: $golden;
